--- a/API/package.json
+++ b/API/package.json
@@ -18,10 +18,12 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.2",
     "puppeteer": "^1.19.0"
   }
